--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -26,7 +26,12 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .bg-overlay {
-  background-image: url('../../assets/img/auth-bg-pattern.svg');
+  background-image: url('../../assets/img/bg-pattern-auth.svg');
+  background-size: cover;
+}
+
+.bg-overlay-header {
+  background-image: url('../../assets/img/bg-pattern-header.svg');
   background-size: cover;
 }
 
@@ -101,6 +106,36 @@ input:-internal-autofill-selected {
     height: 20px;
     width: 20px;
   }
+}
+
+.loading {
+  animation: rotate 2s infinite;
+  border: 3px dashed #CE9833;
+  display: block;
+  
+  &.sm {
+    border-radius: 10px;
+    height: 20px;
+    width: 20px;
+  }
+  
+  &.md {
+    border-radius: 20px;
+    height: 40px;
+    width: 40px;
+  }
+  
+  &.lg {
+    border-radius: 30px;
+    height: 60px;
+    width: 60px;
+  }
+}
+
+.overflow-ellipse {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .verification {
