--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -25,6 +25,41 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0;
 }
 
+.select {
+  position: relative;
+
+  select {
+    appearance: none;
+    background-color: #ffffff;
+    font-family: 'Circular Std';
+    outline: none;
+    padding-bottom: 2px;
+    padding-top: 2px;
+  }
+
+  img {
+    bottom: 5px;
+    display: block;
+    height: 10px;
+    position: absolute;
+    right: 10px;
+  }
+}
+
+.btn-grey-outline,
+.btn-grey-outline:focus,
+.btn-grey-outline:active {
+  border: 1px solid #969696;
+  outline: none;
+  font-family: 'Circular Std';
+  @apply bg-transparent;
+
+  &:hover {
+    background-color: black;
+    color: white;
+  }
+}
+
 .bg-overlay {
   background-image: url('../../assets/img/bg-pattern-auth.svg');
   background-size: cover;
@@ -65,6 +100,10 @@ input:-internal-autofill-selected {
   background: white;
   border-bottom: 1px solid black;
   outline: none;
+
+  &.inactive {
+    border-bottom: 1px solid #DBDBDB;
+  }
 }
 
 .fade-enter-active,
@@ -112,6 +151,14 @@ input:-internal-autofill-selected {
 
 .input-fields {
   border-bottom: 1px solid black;
+
+  &.inactive {
+    border-bottom: 1px solid #DBDBDB;
+    
+    select {
+      color: gray;
+    }
+  }
 
   input {
     outline: none;
