- Add facebook, twitter and no-image images, and update general styling

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -13,6 +13,9 @@ body, html, #app {
   -moz-osx-font-smoothing: grayscale;
 }
 
+button {
+  font-family: 'Circular Std';
+}
 
 input:disabled {
   background: white;
