--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -59,6 +59,7 @@ input[type=number]::-webkit-outer-spin-button {
 
   &:hover {
     background-color: black;
+    border: 1px solid black;
     color: white;
   }
 }
