--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -49,9 +49,20 @@ input[type=number]::-webkit-outer-spin-button {
   }
 }
 
+.bg-overlay {
+  background-image: url('../../assets/img/bg-pattern-auth.svg');
+  background-size: cover;
+}
+
+.bg-overlay-header {
+  background-image: url('../../assets/img/bg-pattern-header.svg');
+  background-size: cover;
+}
+
 .btn-grey-outline,
 .btn-grey-outline:focus,
-.btn-grey-outline:active {
+.btn-grey-outline:active,
+.btn-grey-outline:enabled {
   border: 1px solid #969696;
   outline: none;
   font-family: 'Circular Std';
@@ -61,16 +72,6 @@ input[type=number]::-webkit-outer-spin-button {
     background-color: black;
     color: white;
   }
-}
-
-.bg-overlay {
-  background-image: url('../../assets/img/bg-pattern-auth.svg');
-  background-size: cover;
-}
-
-.bg-overlay-header {
-  background-image: url('../../assets/img/bg-pattern-header.svg');
-  background-size: cover;
 }
 
 .btn-primary,
