- Add it to politician page

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -62,7 +62,7 @@ input[type=number]::-webkit-outer-spin-button {
 .btn-grey-outline,
 .btn-grey-outline:focus,
 .btn-grey-outline:active,
-.btn-grey-outline:enabled {
+.btn-grey-outline:enabled,
 .btn-subscribe {
   border: 1px solid #969696;
   outline: none;
