--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -145,12 +145,12 @@ input:-internal-autofill-selected {
 
 .fade-enter-active,
 .fade-leave-active {
-    transition: opacity .5s
+    transition: opacity .5s;
 }
 
 .fade-enter,
 .fade-leave-to {
-    opacity: 0
+  opacity: 0;
 }
 
 .hidden-overflow {
