--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -145,6 +145,13 @@ input[type=number]::-webkit-outer-spin-button {
   }
 }
 
+.btn-primary:disabled,
+.btn-primary-outline:disabled,
+.btn-subscribe:disabled {
+  opacity: 0.8;
+  cursor: not-allowed;
+}
+
 .field,
 input:-webkit-autofill,
 input:-internal-autofill-selected,
